Implemented useState and useEffect hooks

--- a/frontend/app/translations/en/global.json
+++ b/frontend/app/translations/en/global.json
@@ -4,5 +4,34 @@
         "home": "Home",
         "view": "View Applications",
         "create": "Create Application"
+    },
+    "homePage": {
+        "page": "Home",
+        "title": "Welcome to the Job Applications Tracking system!",
+        "date": "en-US"
+    },
+    "viewAllPage": {
+        "page": "Applications",
+        "title": "Job Applications",
+        "button": "View application",
+        "date": "en-US"
+    },
+    "viewOnePage": {
+        "page": "Application",
+        "title": "Job Application",
+        "buttonEdit": "Edit application",
+        "buttonDelete": "Delete application",
+        "date": "en-US"
+    },
+    "createPage": {
+        "page": "Create new",
+        "title": "Create New Application",
+        "button": "Create"
+    },
+    "editPage": {
+        "page": "Edit",
+        "title": "Edit Application",
+        "button": "Save",
+        "date": "en-US"
     }
 }
